<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/hitungFragment">

    <fragment
        android:id="@+id/hitungFragment"
        android:name="org.d3if1053.hitungzakatpenghasilan.ui.hitung.HitungFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_hitung"/>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="org.d3if1053.hitungzakatpenghasilan.ui.about.AboutFragment"
        android:label="@string/about_app_title"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/rulesFragment"
        android:name="org.d3if1053.hitungzakatpenghasilan.ui.rules.RulesFragment"
        android:label="@string/penjelasan_title"
        tools:layout="@layout/fragment_rules" />
    <fragment
        android:id="@+id/historyFragment"
        android:name="org.d3if1053.hitungzakatpenghasilan.ui.history.HistoryFragment"
        android:label="@string/history_title"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/biodataFragment"
        android:name="org.d3if1053.hitungzakatpenghasilan.ui.biodata.BiodataFragment"
        android:label="@string/biodata_developer"
        tools:layout="@layout/fragment_biodata" />
</navigation>