<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.biodata.BiodataFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/wrapperBiodata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/showBiodata"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/topTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/delius_swash_caps"
                    android:text="@string/my_biodata"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/userImage"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@string/user_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/topTitle"
                    app:shapeAppearanceOverlay="@style/roundedImageView"
                    tools:src="@drawable/ic_baseline_broken_image_24" />

                <TextView
                    android:id="@+id/bioNameTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/nama"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/userImage" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/bioNameTitle"
                    app:layout_constraintTop_toTopOf="@+id/bioNameTitle"
                    tools:text="TextView" />

                <TextView
                    android:id="@+id/bioLocationTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/alamat"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/bioNameTitle"
                    app:layout_constraintTop_toBottomOf="@+id/bioNameTitle" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/bioLocationTitle"
                    app:layout_constraintTop_toTopOf="@+id/bioLocationTitle"
                    tools:text="TextView" />

                <TextView
                    android:id="@+id/bioCollegeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/company"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/bioLocationTitle"
                    app:layout_constraintTop_toBottomOf="@+id/bioLocationTitle" />

                <TextView
                    android:id="@+id/college"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/bioCollegeTitle"
                    app:layout_constraintTop_toTopOf="@+id/bioCollegeTitle"
                    tools:text="TextView" />

                <TextView
                    android:id="@+id/bioLinkedInTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/linked_in"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/bioCollegeTitle"
                    app:layout_constraintTop_toBottomOf="@+id/bioCollegeTitle" />

                <TextView
                    android:id="@+id/linkedIn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:autoLink="web"
                    android:textColorLink="#03A9F4"
                    app:layout_constraintBottom_toBottomOf="@+id/bioLinkedInTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/bioLinkedInTitle"
                    app:layout_constraintTop_toTopOf="@+id/bioLinkedInTitle"
                    tools:text="TextView" />

                <TextView
                    android:id="@+id/bioAboutTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="16dp"
                    android:text="@string/bio"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/bioLinkedInTitle"
                    app:layout_constraintTop_toBottomOf="@+id/bioLinkedInTitle" />

                <TextView
                    android:id="@+id/bio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/bioAboutTitle"
                    app:layout_constraintTop_toBottomOf="@+id/bioAboutTitle"
                    tools:text="TextView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/networkError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:text="@string/koneksi_error"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>